unpackaged/objects/Collection_Task__c.object
<CustomObject>
    <fields>
        <fullName>Amount_Pending__c</fullName>
        <formula>Initial_Total_Amount_To_Be_Recovered__c  -  Amount_Recovered__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount Pending</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_Recovered__c</fullName>
        <label>Amount Recovered</label>
        <summarizedField>Payment_Receipt__c.Receipt_Amount__c</summarizedField>
        <summaryForeignKey>Payment_Receipt__c.Collection_Task__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Assigned_Date__c</fullName>
        <label>Assigned Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Associated_Cost__c</fullName>
        <label>Associated Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Collection Tasks</relationshipLabel>
        <relationshipName>Collection_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EMI_Overdue_Amount__c</fullName>
        <label>EMI Overdue Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Initial_Total_Amount_To_Be_Recovered__c</fullName>
        <label>Initial Total Amount To Be Recovered</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Loan_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Loan Account</label>
        <referenceTo>Loan_Account__c</referenceTo>
        <relationshipLabel>Collection Tasks</relationshipLabel>
        <relationshipName>Collection_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Next_Step_Date__c</fullName>
        <label>Next Step Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Next_Step__c</fullName>
        <label>Next Step</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Notes_Outcome__c</fullName>
        <label>Notes/Outcome</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Other_Overdue_Amount__c</fullName>
        <label>Other Overdue Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PTP_Date__c</fullName>
        <label>PTP Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Complete - Overdue amount Pending</fullName>
                </value>
                <value>
                    <fullName>Complete - Fully Recovered</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Collection Task</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Customer__c</columns>
        <columns>Loan_Account__c</columns>
        <columns>Associated_Cost__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>collection_task_queue_Collection_Task</fullName>
        <filterScope>Queue</filterScope>
        <label>Collection Task Queue</label>
        <queue>Collection_Task_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>CT-{0000}</displayFormat>
        <label>Collection #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Collection Task</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>